# python-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: main.py
tests/: test_main.py
